<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <CheckBox
            android:id="@+id/chkLanche01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"/>

        <ImageView
            android:id="@+id/imgLanche01"
            android:layout_width="@dimen/img_dimensao"
            android:layout_height="@dimen/img_dimensao"
            android:src="@drawable/lanche01"
            android:layout_toRightOf="@+id/chkLanche01"/>

        <TextView
            android:id="@+id/txtLanche01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imgLanche01"
            android:text="@string/hamburgao_da_tia" />

        <TextView
            android:id="@+id/txtPrecoLanche01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLanche01"
            android:layout_toRightOf="@+id/imgLanche01"
            android:text="@string/quinzao" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/detalhes"
            android:layout_marginTop="15dp"
            android:onClick="detalhes"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <CheckBox
            android:id="@+id/chkLanche02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"/>

        <ImageView
            android:id="@+id/imgLanche02"
            android:layout_width="@dimen/img_dimensao"
            android:layout_height="@dimen/img_dimensao"
            android:src="@drawable/lanche01"
            android:layout_toRightOf="@+id/chkLanche02"/>

        <TextView
            android:id="@+id/txtLanche02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imgLanche02"
            android:text="@string/hamburgao_do_avo" />

        <TextView
            android:id="@+id/txtPrecoLanche02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLanche02"
            android:layout_toRightOf="@+id/imgLanche02"
            android:text="@string/quinzao" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/detalhes"
            android:layout_marginTop="15dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <CheckBox
            android:id="@+id/chkLanche03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"/>

        <ImageView
            android:id="@+id/imgLanche03"
            android:layout_width="@dimen/img_dimensao"
            android:layout_height="@dimen/img_dimensao"
            android:src="@drawable/lanche01"
            android:layout_toRightOf="@+id/chkLanche03"/>

        <TextView
            android:id="@+id/txtLanche03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imgLanche03"
            android:text="@string/hamburgao_do_tio" />

        <TextView
            android:id="@+id/txtPrecoLanche03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLanche03"
            android:layout_toRightOf="@+id/imgLanche03"
            android:text="@string/quinzao" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/detalhes"
            android:layout_marginTop="15dp"/>
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comprar"
        android:onClick="compar"/>


</LinearLayout>

